Hamburger Navigation - Iteration 1
Testing out a method for the  hamburger menu

--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -15,6 +15,17 @@
 </head>
 <body>
     <p id="testcase">test</p>
+
+    <!--Hamburger Menu Navigation-->
+    <nav id="hamburgernav">
+        <label for="hamburgericon">&#9776</label>
+        <input type="checkbox" id="hamburgericon">
+        
+    <div id="hamburgeritems">
+        <a href="index.html">Home</a>
+        <a href="product-browsing.html">Browse Flavors</a>
+    </div>
+    </nav>
     
 </body>
 </html>
