Service Boxes, Banner Text & Button
Customizing the CSS of the service button to make it appear correctly

Adding the divs for the service boxes

--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -19,17 +19,17 @@
 <body>
 
     <header class="pageheader">
-        <img src="" alt="A circular logo saying Bun Bun Bake Shop with a little brown bun with a heart in the middle.">
+        <img class="headerlogo" src="BunBunLogo.png" alt="A circular logo saying Bun Bun Bake Shop with a little brown bun with a heart in the middle.">
 
 <!--Shopping Cart-->
         <div id="shoppingcart">
-            <p>Cart</p>
             <a href="#">
+                <span id="carttext">Cart</span>
                 <span class="glyphicon glyphicon-shopping-cart"></span>
             </a>
         </div>
 
-    <!--Hamburger Menu Navigation-->
+<!--Hamburger Menu Navigation-->
         <nav id="hamburgernav">
             <label for="hamburgericon">&#9776</label>
             <input type="checkbox" id="hamburgericon">
@@ -39,10 +39,32 @@
             </div>
         </nav>  
     </header>
+    
+<!--Banner Image-->
     <div class="bannerimage">
-
+        <div class="bannertext">
+            <h1>Buns out, Funs out</h1>
+            <p>Your favorites are back</p>
+            <button class="browsebutton">Browse Flavors</button>
+        </div>
     </div>
 
+<!--Service Boxes-->
+    <div>
+        <div class="servicebox">
+            <div>Box 1</div>
+        </div>
+        <div class="servicebox">
+            <div>Box 2</div>
+        </div>
+        <div class="servicebox">
+            <div>Box 3</div>
+        </div>
+        <div class="servicebox">
+            <div>Box 4</div>
+        </div>
+    </div>
+<!--Footer-->
     <footer class="pagefooter"></footer>
     
 </body>
