--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -50,22 +50,33 @@
     </div>
 
 <!--Service Boxes-->
-    <div>
+    <div id="servicecontainer">
         <div class="servicebox">
-            <div>Box 1</div>
+            <img id="cateringlogo" src="images/birthday_cake_icon.png" alt="a birthday cake logo in icy blue">
+            <h3 id="servicetitle">Catering</h3>
+            <p class="servicetext">Weddings, parties, corporate events. <br>We do it all.</p>
+            <button class="generalbutton">Learn More</button>
         </div>
         <div class="servicebox">
-            <div>Box 2</div>
+            <img id="cateringlogo" src="images/birthday_cake_icon.png" alt="a birthday cake logo in icy blue">
+            <h3 id="servicetitle">About Us</h3>
+            <p class="servicetext">Learn about how we became Pittsburgh’s best bun shop.</p>
+            <button class="generalbutton">Learn More</button>
         </div>
         <div class="servicebox">
-            <div>Box 3</div>
-        </div>
-        <div class="servicebox">
-            <div>Box 4</div>
+            <img id="cateringlogo" src="Images/same_day_pick_up_logo.png" alt="a birthday cake logo in icy blue">
+            <h3 id="servicetitle">Same-Day <br> Pick-Up</h3>
+            <p class="servicetext">No need to wait.<br>Order online and pick up that day.</p>
+            <button class="generalbutton">Learn More</button>
         </div>
     </div>
-<!--Footer-->
-    <footer class="pagefooter"></footer>
+
+
+<!--Footer
+<footer class="pagefooter"></footer>
+
+-->
+    
     
 </body>
 </html>
