Added logos and pieces of CSS

--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <header class="pageheader">
-        <img class="headerlogo" src="BunBunLogo.png" alt="A circular logo saying Bun Bun Bake Shop with a little brown bun with a heart in the middle.">
+        <img class="headerlogo" src="Images/bun_bun_logo.png" alt="A circular logo saying Bun Bun Bake Shop with a little brown bun with a heart in the middle.">
 
 <!--Shopping Cart-->
         <div id="shoppingcart">
@@ -43,7 +43,7 @@
 <!--Banner Image-->
     <div class="bannerimage">
         <div class="bannertext">
-            <h1>Buns out, Funs out</h1>
+            <h1 id="bunsouttext">Buns out, Funs out</h1>
             <p>Your favorites are back</p>
             <button class="browsebutton">Browse Flavors</button>
         </div>
@@ -52,31 +52,26 @@
 <!--Service Boxes-->
     <div id="servicecontainer">
         <div class="servicebox">
-            <img id="cateringlogo" src="images/birthday_cake_icon.png" alt="a birthday cake logo in icy blue">
+            <img id="servicelogo" src="images/birthday_cake_icon.png" alt="a birthday cake logo in icy blue">
             <h3 id="servicetitle">Catering</h3>
             <p class="servicetext">Weddings, parties, corporate events. <br>We do it all.</p>
             <button class="generalbutton">Learn More</button>
         </div>
         <div class="servicebox">
-            <img id="cateringlogo" src="images/birthday_cake_icon.png" alt="a birthday cake logo in icy blue">
-            <h3 id="servicetitle">About Us</h3>
+            <img id="servicelogo" src="images/about_us_logo.png" alt="a whisk in an icy blue color">
+            <h3 id="servicetitle">About <br> Us</h3>
             <p class="servicetext">Learn about how we became Pittsburgh’s best bun shop.</p>
             <button class="generalbutton">Learn More</button>
         </div>
         <div class="servicebox">
-            <img id="cateringlogo" src="Images/same_day_pick_up_logo.png" alt="a birthday cake logo in icy blue">
+            <img id="servicelogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
             <h3 id="servicetitle">Same-Day <br> Pick-Up</h3>
             <p class="servicetext">No need to wait.<br>Order online and pick up that day.</p>
             <button class="generalbutton">Learn More</button>
         </div>
     </div>
 
-
-<!--Footer
 <footer class="pagefooter"></footer>
-
--->
-    
     
 </body>
 </html>
