creating bproduct-browsing page and breadcrumbs

--- a/homework_5/product-browsing.html
+++ b/homework_5/product-browsing.html
@@ -39,34 +39,38 @@
             </li>
         </ul>
 </header>
-<!--Banner Image-->
-    <div class="bannerimage">
-        <div class="bannertext">
-            <h1 id="bunsouttext">Buns out, Funs out</h1>
-            <p id="favoritesback">Your favorites are back</p>
-            <button class="browsebutton">Browse Flavors</button>
-        </div>
-    </div>
+<!--Bread Crumbs-->
+<!--Citation: https://www.w3schools.com/howto/howto_css_breadcrumbs.asp-->
+<ul class="breadcrumbs">
+    <li id="homebreadcrumb"><a href="index.html">Home</a></li>
+    <li id="onbrowseflavors"><a href="product-browsing.html">Browse Flavors</a></li>
+</ul>
 
 <!--Service Boxes-->
     <div id="servicecontainer">
         <div class="servicebox">
             <img id="servicelogo" src="images/birthday_cake_icon.png" alt="a birthday cake logo in icy blue">
-            <h3 id="servicetitle">Catering</h3>
             <p class="servicetext">Weddings, parties, corporate events. <br>We do it all.</p>
-            <button class="generalbutton">Learn More</button>
         </div>
         <div class="servicebox">
             <img id="servicelogo" src="images/about_us_logo.png" alt="a whisk in an icy blue color">
-            <h3 id="servicetitle">About <br> Us</h3>
             <p class="servicetext">Learn about how we became Pittsburgh’s best bun shop.</p>
-            <button class="generalbutton">Learn More</button>
         </div>
         <div class="servicebox">
             <img id="servicelogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
-            <h3 id="servicetitle">Same-Day <br> Pick-Up</h3>
             <p class="servicetext">No need to wait.<br>Order online and pick up that day.</p>
-            <button class="generalbutton">Learn More</button>
+        </div>
+        <div class="servicebox">
+            <img id="servicelogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
+            <p class="servicetext">No need to wait.<br>Order online and pick up that day.</p>
+        </div>
+        <div class="servicebox">
+            <img id="servicelogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
+            <p class="servicetext">No need to wait.<br>Order online and pick up that day.</p>
+        </div>
+        <div class="servicebox">
+            <img id="servicelogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
+            <p class="servicetext">No need to wait.<br>Order online and pick up that day.</p>
         </div>
     </div>
 
