Further Iterating on Flavor Containers

--- a/homework_5/product-browsing.html
+++ b/homework_5/product-browsing.html
@@ -46,31 +46,35 @@
     <li id="onbrowseflavors"><a href="product-browsing.html">Browse Flavors</a></li>
 </ul>
 
+<h1>Flavors</h1>
+
 <!--Service Boxes-->
-    <div id="servicecontainer">
-        <div class="servicebox">
-            <img id="servicelogo" src="images/birthday_cake_icon.png" alt="a birthday cake logo in icy blue">
-            <p class="servicetext">Weddings, parties, corporate events. <br>We do it all.</p>
+    <div id="productContainer">
+        <div>
+            <div class="productBox">
+                <img id="servicelogo" src="images/birthday_cake_icon.png" alt="a birthday cake logo in icy blue">
+            </div>
+        <p class="servicetext">Pumpkin Spice</p>
         </div>
-        <div class="servicebox">
+        <div class="productBox">
             <img id="servicelogo" src="images/about_us_logo.png" alt="a whisk in an icy blue color">
-            <p class="servicetext">Learn about how we became Pittsburgh’s best bun shop.</p>
+            <p class="servicetext">Original</p>
         </div>
-        <div class="servicebox">
+        <div class="productBox">
             <img id="servicelogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
-            <p class="servicetext">No need to wait.<br>Order online and pick up that day.</p>
+            <p class="servicetext">Gluten-Free Original</p>
         </div>
-        <div class="servicebox">
+        <div class="productBox">
             <img id="servicelogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
-            <p class="servicetext">No need to wait.<br>Order online and pick up that day.</p>
+            <p class="servicetext">Carmel Pecan</p>
         </div>
-        <div class="servicebox">
+        <div class="productBox">
             <img id="servicelogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
-            <p class="servicetext">No need to wait.<br>Order online and pick up that day.</p>
+            <p class="servicetext">Walnut</p>
         </div>
-        <div class="servicebox">
+        <div class="productBox">
             <img id="servicelogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
-            <p class="servicetext">No need to wait.<br>Order online and pick up that day.</p>
+            <p class="servicetext">Blackberry</p>
         </div>
     </div>
 
