Created all of the flavor boxes and text labels

--- a/homework_5/product-browsing.html
+++ b/homework_5/product-browsing.html
@@ -46,37 +46,50 @@
     <li id="onbrowseflavors"><a href="product-browsing.html">Browse Flavors</a></li>
 </ul>
 
-<h1>Flavors</h1>
+<h1 class="FlavorsHeader">Flavors</h1>
 
-<!--Service Boxes-->
-    <div id="productContainer">
-        <div>
-            <div class="productBox">
-                <img id="servicelogo" src="images/birthday_cake_icon.png" alt="a birthday cake logo in icy blue">
-            </div>
-        <p class="servicetext">Pumpkin Spice</p>
-        </div>
-        <div class="productBox">
-            <img id="servicelogo" src="images/about_us_logo.png" alt="a whisk in an icy blue color">
-            <p class="servicetext">Original</p>
-        </div>
-        <div class="productBox">
-            <img id="servicelogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
-            <p class="servicetext">Gluten-Free Original</p>
-        </div>
-        <div class="productBox">
-            <img id="servicelogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
-            <p class="servicetext">Carmel Pecan</p>
-        </div>
-        <div class="productBox">
-            <img id="servicelogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
-            <p class="servicetext">Walnut</p>
-        </div>
-        <div class="productBox">
-            <img id="servicelogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
-            <p class="servicetext">Blackberry</p>
-        </div>
-    </div>
+<!--Product Boxes-->
+<div id="ProductBox1">
+     <img src="Images/Pumpkin Spice.png" id="ProductPhoto" alt="a glazed cinnamon bun with pumpkin pieces">
+</div>
+<div id="PumpkinSpiceTextContainer">
+    <p><span style="color:red;"><b>(New)</b></span> Pumpkin Spice</p>
+</div>
+
+<div id="ProductBox2">
+    <img src="Images/Original.png" id="ProductPhoto" alt="a classic white glazed cinnamon bun">
+</div>
+<div id="OriginalContainer">
+    <p> Original</p>
+</div>
+
+<div id="ProductBox3">
+    <img src="Images/Gluten Free Original.png" id="GFProductPhoto" alt="a classic white glazed cinnamon bun with GF logo to represent GF free">
+</div>
+<div id="GlutenFreeContainer">
+    <p> Gluten-Free Original</p>
+</div>
+
+<div id="ProductBox4">
+    <img src="Images/Carmel Pecan.png" id="ProductPhoto" alt="a brown glazed cinnamon bun with pecans on top">
+</div>
+<div id="CarmelPecanContainer">
+    <p>Carmel Pecan</p>
+</div>
+
+<div id="ProductBox5">
+    <img src="Images/Walnut.png" id="ProductPhoto" alt="a white glazed cinnamon bun">
+</div>
+<div id="WalnutContainer">
+    <p>Walnut</p>
+</div>
+   
+<div id="ProductBox6">
+    <img src="Images/Blackberry.png" id="ProductPhoto" alt="a clear glazed cinnamon bun with red filling">
+</div>
+<div id="BlackberryContainer">
+    <p>Blackberry</p>
+</div>
 
 <!--Footer-->
 <footer class="pagefooter"></footer>
