Further work on breadcrumbs

--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -22,6 +22,7 @@
         <img class="headerlogo" src="Images/bun_bun_logo.png" alt="A circular logo saying Bun Bun Bake Shop with a little brown bun with a heart in the middle.">
 
         <!--Navigation Menu-->
+        <!-- Citation: https://www.w3schools.com/css/css_navbar_horizontal.asp-->
         <ul id="topbarnavigation">
             <li><a href="index.html">Home</a></li>
             <li><a href="">About Us</a></li>
@@ -71,7 +72,7 @@
     </div>
 
 <!--Footer-->
-<footer class="pagefooter"></footer>
+<footer id="pagefooter"></footer>
     
 </body>
 </html>
