--- a/homework_5/product-browsing.html
+++ b/homework_5/product-browsing.html
@@ -18,31 +18,32 @@
 </head>
 <body>
 <!--Page Header-->
-    <header class="pageheader">
-        <img class="headerlogo" src="Images/bun_bun_logo.png" alt="A circular logo saying Bun Bun Bake Shop with a little brown bun with a heart in the middle.">
+<header class="pageheader">
+    <img class="headerlogo" src="Images/bun_bun_logo.png" alt="A circular logo saying Bun Bun Bake Shop with a little brown bun with a heart in the middle.">
 
-        <!--Navigation Menu-->
-        <ul id="topbarnavigation">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="">About Us</a></li>
-            <li><a href="product-browsing.html">Browse Flavors</a></li>
-            <li><a href="">Catering</a></li>
-            <li><a href="">Same-day Pick-up</a></li>
-            <li>
+    <!--Navigation Menu-->
+    <ul id="topbarnavigation">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="product-browsing.html">Browse Flavors</a></li>
+        <li><a href="">Catering</a></li>
+        <li><a href="">Same-day Pick-up</a></li>
+        <li>
                 <!--Shopping Cart-->
-                <div id="shoppingcart">
-                    <a href="#">
-                        <span id="carttext">CART</span>
-                        <span class="glyphicon glyphicon-shopping-cart"></span>
-                    </a>
-                </div>
-            </li>
-        </ul>
+            <div id="shoppingcart">
+                <a href="#">
+                    <span id="carttext">CART</span>
+                    <span class="glyphicon glyphicon-shopping-cart"></span>
+                </a>
+            </div>
+        </li>
+    </ul>
 </header>
 <!--Bread Crumbs-->
 <!--Citation: https://www.w3schools.com/howto/howto_css_breadcrumbs.asp-->
 <ul class="breadcrumbs">
     <li id="homebreadcrumb"><a href="index.html">Home</a></li>
+    <li id="slashcrumb"><a href="_blank">  /  </a></li>
     <li id="onbrowseflavors"><a href="product-browsing.html">Browse Flavors</a></li>
 </ul>
 
@@ -92,8 +93,7 @@
 </div>
 
 <!--Footer-->
-<footer class="pagefooter"></footer>
-    
+<footer id="ProductBrowsingPageFooter"></footer> 
 </body>
 </html>
 
