Experimenting with Links

--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -41,6 +41,7 @@
         </ul>
 </header>
 <!--Banner Image-->
+<!--Citation: https://www.w3schools.com/howto/howto_css_hero_image.asp-->
     <div class="bannerimage">
         <div class="bannertext">
             <h1 id="bunsouttext">Buns out, Funs out</h1>
@@ -50,6 +51,7 @@
     </div>
 
 <!--Service Boxes-->
+<!--Citation: https://css-tricks.com/stacked-borders/-->
     <div id="servicecontainer">
         <div class="servicebox">
             <img id="servicelogo" src="images/birthday_cake_icon.png" alt="a birthday cake logo in icy blue">
