Testing out overlay strategies

--- a/homework_5/product-browsing.html
+++ b/homework_5/product-browsing.html
@@ -50,13 +50,15 @@
 <h1 class="FlavorsHeader">Flavors</h1>
 
 <!--Product Boxes-->
-<a href=
-<div id="ProductBox1">
-     <img src="Images/Pumpkin Spice.png" id="ProductPhoto" alt="a glazed cinnamon bun with pumpkin pieces">
-</div>
+<a href="product-detail.hmtl">
+    <div id="ProductBox1">
+         <img src="Images/Pumpkin Spice.png" id="ProductPhoto" alt="a glazed cinnamon bun with pumpkin pieces">
+    </div>
+</a>
 <div id="PumpkinSpiceTextContainer">
     <p><span style="color:red;"><b>(New)</b></span> Pumpkin Spice</p>
 </div>
+
 
 <div id="ProductBox2">
     <img src="Images/Original.png" id="ProductPhoto" alt="a classic white glazed cinnamon bun">
