--- a/homework_5/product-detail.html
+++ b/homework_5/product-detail.html
@@ -1,12 +1,100 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bun Bun Bakeshop</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-    
+<div id="overlay"></div>
+<!--Page Header-->
+<header class="pageheader">
+    <img class="headerlogo" src="Images/bun_bun_logo.png" alt="A circular logo saying Bun Bun Bake Shop with a little brown bun with a heart in the middle.">
+
+    <!--Navigation Menu-->
+    <ul id="topbarnavigation">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="product-browsing.html">Browse Flavors</a></li>
+        <li><a href="">Catering</a></li>
+        <li><a href="">Same-day Pick-up</a></li>
+        <li>
+                <!--Shopping Cart-->
+            <div id="shoppingcart">
+                <a href="#">
+                    <span id="carttext">CART</span>
+                    <span class="glyphicon glyphicon-shopping-cart"></span>
+                </a>
+            </div>
+        </li>
+    </ul>
+</header>
+<!--Bread Crumbs-->
+<!--Citation: https://www.w3schools.com/howto/howto_css_breadcrumbs.asp-->
+<ul class="breadcrumbs">
+    <li id="homebreadcrumb"><a href="index.html">Home</a></li>
+    <li id="slashcrumb"><a href="_blank">  /  </a></li>
+    <li id="onbrowseflavors"><a href="product-browsing.html">Browse Flavors</a></li>
+</ul>
+
+<h1 class="FlavorsHeader">Flavors</h1>
+
+<!--Product Boxes-->
+<div id="ProductBox1">
+     <img src="Images/Pumpkin Spice.png" id="ProductPhoto" alt="a glazed cinnamon bun with pumpkin pieces">
+</div>
+<div id="PumpkinSpiceTextContainer">
+    <p><span style="color:red;"><b>(New)</b></span> Pumpkin Spice</p>
+</div>
+
+<div id="ProductBox2">
+    <img src="Images/Original.png" id="ProductPhoto" alt="a classic white glazed cinnamon bun">
+</div>
+<div id="OriginalContainer">
+    <p> Original</p>
+</div>
+
+<div id="ProductBox3">
+    <img src="Images/Gluten Free Original.png" id="GFProductPhoto" alt="a classic white glazed cinnamon bun with GF logo to represent GF free">
+</div>
+<div id="GlutenFreeContainer">
+    <p> Gluten-Free Original</p>
+</div>
+
+<div id="ProductBox4">
+    <img src="Images/Carmel Pecan.png" id="ProductPhoto" alt="a brown glazed cinnamon bun with pecans on top">
+</div>
+<div id="CarmelPecanContainer">
+    <p>Carmel Pecan</p>
+</div>
+
+<div id="ProductBox5">
+    <img src="Images/Walnut.png" id="ProductPhoto" alt="a white glazed cinnamon bun">
+</div>
+<div id="WalnutContainer">
+    <p>Walnut</p>
+</div>
+   
+<div id="ProductBox6">
+    <img src="Images/Blackberry.png" id="ProductPhoto" alt="a clear glazed cinnamon bun with red filling">
+</div>
+<div id="BlackberryContainer">
+    <p>Blackberry</p>
+</div>
+
+<!--Footer-->
+<footer id="ProductBrowsingPageFooter"></footer> 
 </body>
 </html>
+
