--- a/homework_5/product-detail.html
+++ b/homework_5/product-detail.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bun Bun Bakeshop</title>
-    <link rel="stylesheet" href=
-
+    <link rel="stylesheet" href="product-detail.css">
 </head>
 <body>
     <p>test</p>
