Testing out display box options

--- a/homework_5/product-detail.html
+++ b/homework_5/product-detail.html
@@ -19,9 +19,28 @@
 <body>
     <div id="overlay">
         <div id="ProductDetailBox">
-            <h1 id="PumpkinSpiceText">Pumpkin Spice Bun</h1>
-            <p><b>Choose your glaze</b></p>
-            <div id="GlazeOptions">Vanilla Milk (recommended)</div>
+            <div id="OptionBoxSide">
+                <h2 id="PumpkinSpiceText">Pumpkin Spice Bun</h2>
+                <div id="GlazeBox">
+                    <p><b>Choose your glaze</b></p>
+                    <div id="OptionsBox">Vanilla Milk (recommended)</div>
+                </div>
+                <div id="RollsBox">
+                    <p><b>How many rolls would you like?</b></p>
+                    <div id="OptionsBox">1</div>
+                </div>
+                <button class="generalbutton">Order</button>
+            </div>
+            <div id="DescriptionSide">
+                <img src="Images/pumpkin with border.png" alt="a cinnamon bun with a clear glaze and 
+                orange pumpkin pieces on top of a white plate">
+                <p>An aromatic, fall-inspired bun available for a limited time.</p>
+                <ul>
+                    <li>Contains gluten</li>
+                    <li>Contains wheat</li>
+                    <li>100% organic ingredients</li> 
+                </ul>
+            </div>
         </div>
     </div>
 
