Building out the overlay's selection menu

--- a/homework_5/product-detail.html
+++ b/homework_5/product-detail.html
@@ -29,17 +29,16 @@
                     <p><b>How many rolls would you like?</b></p>
                     <div id="OptionsBox">1</div>
                 </div>
-                <button class="generalbutton">Order</button>
+                <button class="GeneralButton">Order</button>
             </div>
             <div id="DescriptionSide">
-                <img src="Images/pumpkin with border.png" alt="a cinnamon bun with a clear glaze and 
+                <img id="PumpkinPic" src="Images/pumpkin with border.png" alt="a cinnamon bun with a clear glaze and 
                 orange pumpkin pieces on top of a white plate">
-                <p>An aromatic, fall-inspired bun available for a limited time.</p>
-                <ul>
-                    <li>Contains gluten</li>
-                    <li>Contains wheat</li>
-                    <li>100% organic ingredients</li> 
-                </ul>
+                <p id="DescriptionText">An aromatic, fall-inspired bun available for <br> a limited time.</p>
+                <p>*Contains gluten</p>
+                <p>*Contains wheat</p>
+
+                
             </div>
         </div>
     </div>
