Experimenting with Exit Logo

--- a/homework_5/product-detail.html
+++ b/homework_5/product-detail.html
@@ -20,6 +20,7 @@
     <div id="overlay">
         <div id="ProductDetailBox">
             <div id="OptionBoxSide">
+                <img src="Images/Exit.png" alt="exit button image" href="product-browsing.html">
                 <h2 id="PumpkinSpiceText">Pumpkin Spice Bun</h2>
                 <div id="GlazeBox">
                     <p><b>Choose your glaze</b></p>
