Practicing on Product Boxes

--- a/homework_5/product-browsing.html
+++ b/homework_5/product-browsing.html
@@ -50,7 +50,7 @@
 <h1 class="FlavorsHeader">Flavors</h1>
 
 <!--Product Boxes-->
-<a href="product-detail.hmtl">
+<a href="product-detail.html">
     <div id="ProductBox1">
          <img src="Images/Pumpkin Spice.png" id="ProductPhoto" alt="a glazed cinnamon bun with pumpkin pieces">
     </div>
