--- a/homework_5/product-detail.html
+++ b/homework_5/product-detail.html
@@ -19,8 +19,8 @@
 <body>
     <div id="overlay">
         <div id="ProductDetailBox">
+            <a href="product-browsing.html"><img id="ExitLogo" src="Images/Exit.png" alt="exit button image"></a>
             <div id="OptionBoxSide">
-                <img src="Images/Exit.png" alt="exit button image" href="product-browsing.html">
                 <h2 id="PumpkinSpiceText">Pumpkin Spice Bun</h2>
                 <div id="GlazeBox">
                     <p><b>Choose your glaze</b></p>
