--- a/homework_5/product-detail.html
+++ b/homework_5/product-detail.html
@@ -12,9 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div id="overlay">
@@ -44,12 +42,12 @@
         </div>
     </div>
 
-    !--Page Header-->
-<header class="pageheader">
-    <img class="headerlogo" src="Images/bun_bun_logo.png" alt="A circular logo saying Bun Bun Bake Shop with a little brown bun with a heart in the middle.">
+    <!--Page Header-->
+<header class="PageHeader">
+    <img class="HeaderLogo" src="Images/bun_bun_logo.png" alt="A circular logo saying Bun Bun Bake Shop with a little brown bun with a heart in the middle.">
 
     <!--Navigation Menu-->
-    <ul id="topbarnavigation">
+    <ul id="TopBarNavigation">
         <li><a href="index.html">Home</a></li>
         <li><a href="">About Us</a></li>
         <li><a href="product-browsing.html">Browse Flavors</a></li>
@@ -57,9 +55,9 @@
         <li><a href="">Same-day Pick-up</a></li>
         <li>
                 <!--Shopping Cart-->
-            <div id="shoppingcart">
+            <div id="ShoppingCart">
                 <a href="#">
-                    <span id="carttext">CART</span>
+                    <span id="CartText">CART</span>
                     <span class="glyphicon glyphicon-shopping-cart"></span>
                 </a>
             </div>
@@ -68,10 +66,10 @@
 </header>
 <!--Bread Crumbs-->
 <!--Citation: https://www.w3schools.com/howto/howto_css_breadcrumbs.asp-->
-<ul class="breadcrumbs">
-    <li id="homebreadcrumb"><a href="index.html">Home</a></li>
-    <li id="slashcrumb"><a href="_blank">  /  </a></li>
-    <li id="onbrowseflavors"><a href="product-browsing.html">Browse Flavors</a></li>
+<ul class="BreadCrumbs">
+    <li id="HomeBreadCrumb"><a href="index.html">Home</a></li>
+    <li id="SlashCrumb"><a href="_blank">  /  </a></li>
+    <li id="OnBrowseFlavors"><a href="product-browsing.html">Browse Flavors</a></li>
 </ul>
 
 <h1 class="FlavorsHeader">Flavors</h1>
