Starting About Us Page

--- a/homework_5/about-us.html
+++ b/homework_5/about-us.html
@@ -30,39 +30,28 @@
         <li><a class="NavFont" href="">CART  </a><span><img src="Images/shopping_cart.png" alt="shopping cart logo"></span></li>
     </ul>
 </header>
-<!--Banner Image-->
-<!--Citation: https://www.w3schools.com/howto/howto_css_hero_image.asp-->
-    <div class="BannerImage">
-        <div class="BannerText">
-            <h1 id="BunsOutText">Buns out, Funs out</h1>
-            <p id="FavoritesBack">Your favorites are back</p>
-            <button class="BrowseButton">Browse Flavors</button>
-        </div>
-    </div>
+<!--Bread Crumbs-->
+<!--Citation: https://www.w3schools.com/howto/howto_css_breadcrumbs.asp-->
+<ul class="Breadcrumbs">
+    <li id="HomeBreadcrumb"><a href="index.html">Home</a></li>
+    <li id="SlashCrumb"><a href="_blank">  /  </a></li>
+    <li id="OnBrowseFlavors"><a href="about-us.html">About Us</a></li>
+</ul>
 
-<!--Service Boxes-->
-<!--Citation: https://css-tricks.com/stacked-borders/-->
-    <div id="ServiceContainer">
-        <div class="ServiceBox">
-            <img id="ServiceLogo" src="images/birthday_cake_icon.png" alt="a birthday cake logo in icy blue">
-            <h3 id="ServiceTitle">Catering</h3>
-            <p class="ServiceText">Weddings, parties, corporate events. <br>We do it all.</p>
-            <button class="GeneralButton">Learn More</button>
+<h1 class="FlavorsHeader">About Us</h1>
+<!--About Us Content-->
+    <div id="AboutUsContext">
+        <div class="PictureSide">
+            <img id="MegRyanPhoto" src="" alt="A photo of a smiling couple. The man is wearing green
+            and the woman has pink lipstick and blonde hair.">
         </div>
-        <div class="ServiceBox">
-            <img id="ServiceLogo" src="images/about_us_logo.png" alt="a whisk in an icy blue color">
-            <h3 id="ServiceTitle">About <br> Us</h3>
-            <p class="ServiceText">Learn about how we became Pittsburgh’s best bun shop.</p>
-            <button class="GeneralButton">Learn More</button>
+        <div id="AboutUsText">
+            <p id="AboutUsBio">Here at Bun Bun, a community-driven passion is at the heart of every bun we make.
+                <br><br>We founded Bun Bun Bakeshop in July 2021 after rumenating on our dream for nearly six years. 
+                Despite its challenges, COVID-19 was the perfect catalyst to shake up our lives and embark on a mission to become the best neighborhood’s bakery.
+                <br><br>We are excited to become a part of your sweet journey! </p>
+            <p id="OwnerSignature">Meg & Ryan</p>
         </div>
-        <div class="ServiceBox">
-            <img id="ServiceLogo" src="Images/same_day_pick_up_logo.png" alt="a bun logo in icy blue">
-            <h3 id="ServiceTitle">Same-Day <br> Pick-Up</h3>
-            <p class="ServiceText">No need to wait.<br>Order online and pick up that day.</p>
-            <button class="GeneralButton">Learn More</button>
-        </div>
-    </div>
-
 <!--Footer-->
 <footer id="PageFooter"></footer>
     
