--- a/homework_5/product-browsing.html
+++ b/homework_5/product-browsing.html
@@ -22,7 +22,7 @@
         <!-- Citation: https://www.w3schools.com/css/css_navbar_horizontal.asp-->
     <ul id="TopBarNavigation">
         <li><a class="NavFont" href="index.html">Home</a></li>
-        <li><a class="NavFont" href="">About Us</a></li>
+        <li><a class="NavFont" href="about-us.html">About Us</a></li>
         <li><a class="NavFont" href="product-browsing.html">Browse Flavors</a></li>
         <li><a class="NavFont" href="">Catering</a></li>
         <li><a class="NavFont" href="">Same-day Pick-up</a></li>
